--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<!doctype html>
-<html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+    <title>Blank's github page</title>
+</head>
+<body>
+    <h1>Hi, I'm hosted on github pages</h1>
+    <p>This is made by Blank ,,U wU,,</p>
+</body>
 </html>
