--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://kit.fontawesome.com/b2c884d301.js" crossorigin="anonymous"></script>
-    <script src="assets/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Blank's github page</title>
 </head>
