--- a/boyfriend.html
+++ b/boyfriend.html
@@ -11,10 +11,10 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="projects.html">projects</a></li>
-            <li><a href="socials.html">socials</a></li>
-            <li><a href="boyfriend.html">he wanted this</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="socials.html">Pocials</a></li>
+            <li><a href="boyfriend.html">More</a></li>
         </ul>
     </nav>
     <main class="hewant">
