--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="socials.html">Pocials</a></li>
+            <li><a href="socials.html">Socials</a></li>
             <li><a href="boyfriend.html">More</a></li>
         </ul>
     </nav>
