Added lang, about to index

--- a/boyfriend.html
+++ b/boyfriend.html
@@ -20,13 +20,13 @@
     <main class="hewant">
         <h1>he made me do this</h1>
         <div>
-            <img class="i1" src="https://media1.tenor.com/m/VABnEy-0WiIAAAAd/wallter-regretevator.gif" alt="">
-            <img class="i2" src="https://media1.tenor.com/m/CYFqKbplm1UAAAAd/regretevator-roblox.gif" alt="">
-            <img class="i3" src="https://media1.tenor.com/m/MWz8PRVJtywAAAAC/regret-evator.gif" alt="">
-            <img class="i4" src="https://media.discordapp.net/attachments/1066568997623042079/1070913008131391528/1675368402678811.gif?ex=66418cf5&is=66403b75&hm=4de56f8301960c1a97ad380b4d3807484cef210683b09832aa80566956355513&" alt="">
-            <img class="i5" src="https://media1.tenor.com/m/N-893IGoGHsAAAAd/omg-what.gif" alt="">
-            <img class="i6" src="https://media1.tenor.com/m/kdCuebOFi88AAAAC/tbh-creature-tbh.gif" alt="">
-            <img class="i7" src="https://media1.tenor.com/m/g16jQZqbvWoAAAAC/yippee-happy.gif" alt="">
+            <img draggable=false class="i1" src="https://media1.tenor.com/m/VABnEy-0WiIAAAAd/wallter-regretevator.gif" alt="">
+            <img draggable=false class="i2" src="https://media1.tenor.com/m/CYFqKbplm1UAAAAd/regretevator-roblox.gif" alt="">
+            <img draggable=false class="i3" src="https://media1.tenor.com/m/MWz8PRVJtywAAAAC/regret-evator.gif" alt="">
+            <img draggable=false class="i4" src="https://media.discordapp.net/attachments/1066568997623042079/1070913008131391528/1675368402678811.gif?ex=66418cf5&is=66403b75&hm=4de56f8301960c1a97ad380b4d3807484cef210683b09832aa80566956355513&" alt="">
+            <img draggable=false class="i5" src="https://media1.tenor.com/m/N-893IGoGHsAAAAd/omg-what.gif" alt="">
+            <img draggable=false class="i6" src="https://media1.tenor.com/m/kdCuebOFi88AAAAC/tbh-creature-tbh.gif" alt="">
+            <img draggable=false class="i7" src="https://media1.tenor.com/m/g16jQZqbvWoAAAAC/yippee-happy.gif" alt="">
         </div>
         <a>"I love regretevator☝️🤓" -Jun</a>
     </main>
