--- a/index.html
+++ b/index.html
@@ -18,8 +18,37 @@
         </ul>
     </nav>
     <main class="content">
-        <h1>Hi, I'm hosted on github pages</h1>
-        <p>This is made by Blank ,,U wU,,</p>
+        <div class="island">
+            <img class="img" draggable=false src="https://cdn.discordapp.com/avatars/1059450131784663120/a_aaa331758ac7bfc08e74d0c6d556e433?size=1024">
+            <div class="text">
+                <h1>Hi, I am Blank</h1>
+                <a class="subtext">A hobby programer from Germany</a>
+                <h3 style="margin-top: 5dvh">About</h3>
+                <a class="about">
+                    To this poing i have only done hobby projects. also Me: <img style="height: 2dvh;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Gay_Pride_Flag.svg/640px-Gay_Pride_Flag.svg.png" draggable="false">
+                </a>
+                <h3>Languages & Tools</h3>
+                <div>
+                    <a href="https://www.cprogramming.com"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg"></a>
+                    <a href="https://www.w3schools.com/cpp/"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-original.svg"></a>
+                    <a href="https://www.w3schools.com/cs/index.php"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg"></a>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"></a>
+                    <a href="https://www.typescriptlang.org"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg"></a>
+                    <a href="https://www.java.com/de/"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg"></a>
+                    <a href="https://www.python.org"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"></a>
+                    <a href="https://www.w3.org/html/"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"></a>
+                    <a href="https://www.w3schools.com/css/"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"></a>
+                    <a href="https://tailwindcss.com"><img class="langicons" draggable=false src="https://camo.githubusercontent.com/0568e2de313626b2bd9b96f326941b012d45e9a4db1a23aa78bd8036207e57f8/68747470733a2f2f7777772e766563746f726c6f676f2e7a6f6e652f6c6f676f732f7461696c77696e646373732f7461696c77696e646373732d69636f6e2e737667"></a>
+                    <a href="https://www.mysql.com"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original-wordmark.svg"></a>
+                    <a href="https://nodejs.org/en"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg"></a>
+                    <a href="https://www.docker.com"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg"></a>
+                    <a href="https://git-scm.com"><img class="langicons" draggable=false src="https://camo.githubusercontent.com/fcafa5ebc1f5f789ae7d012a3ecd8fe7bda49516591caf7c37698f764165d880/68747470733a2f2f7777772e766563746f726c6f676f2e7a6f6e652f6c6f676f732f6769742d73636d2f6769742d73636d2d69636f6e2e737667"></a>
+                    <a href="https://www.adobe.com/products/photoshop.html?promoid=RBS7NL7F&mv=other"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/devicons/devicon/master/icons/photoshop/photoshop-line.svg"></a>
+                    <a href="https://unity.com/de?_rsc=9q3bd"><img class="langicons" draggable=false src="https://camo.githubusercontent.com/5f675d7f25e0b706790a667aea70e6ca54c8ddb55fdbed851ab95884e51c7c9f/68747470733a2f2f7777772e766563746f726c6f676f2e7a6f6e652f6c6f676f732f756e69747933642f756e69747933642d69636f6e2e737667"></a>
+                    <a href="https://www.unrealengine.com/de"><img class="langicons" draggable=false src="https://raw.githubusercontent.com/kenangundogan/fontisto/036b7eca71aab1bef8e6a0518f7329f13ed62f6b/icons/svg/brand/unreal-engine.svg"></a>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
